# SNOT

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
Resources/: SNOT_UI.html
Source/: JuceHeader.h  ParamIDs.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/dsp/: AudioNode.h  MacroEngine.h  MidiRouter.h  ModulationMatrix.h  ModuleGraph.h  RemainingModules.h
Source/dsp/modules/: Harmonic808Inflator.h  MutationEngine.h  PlasmaDistortionFilterInflator.h  PortalReverb.h  SpectralWarpChorus.h
Source/preset/: PresetManager.h
